tests/ui/slice_of_type_alias.stderr
error[E0271]: type mismatch resolving `<ElementOpaque as ExternType>::Kind == Trivial`
  --> tests/ui/slice_of_type_alias.rs:13:14
   |
13 |         type ElementOpaque = crate::ElementOpaque;
   |              ^^^^^^^^^^^^^ type mismatch resolving `<ElementOpaque as ExternType>::Kind == Trivial`
   |
note: expected this to be `Trivial`
  --> tests/ui/slice_of_type_alias.rs:27:17
   |
27 |     type Kind = cxx::kind::Opaque;
   |                 ^^^^^^^^^^^^^^^^^
note: required by a bound in `Without::check_rust_type_or_trivial`
  --> src/rust_type.rs
   |
   |     pub const fn check_rust_type_or_trivial<U: ExternType<Kind = Trivial>>(&self) {}
   |                                                           ^^^^^^^^^^^^^^ required by this bound in `Without::check_rust_type_or_trivial`
